# KeckDRPFramework

./: .gitignore  .readthedocs.yml  .rtd_environment.yml  .travis.yml  MANIFEST.in  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: wheels.yml
astropy_helpers/: setup.py
docs/: .gitignore  conf.py  index.rst  rtd-requirements
docs/keckdrpframework/: arguments.rst  events_actions.rst  framework.rst  index.rst  pipelines.rst  plotting_bokeh.rst  primitives.rst  startup_scripts.rst  template_pipeline.rst
docs/source/: index.rst
docs/source/keckdrpframework/: arguments.rst  design.rst  events_actions.rst  framework.rst  framework_api.rst  pipelines.rst  plotting_bokeh.rst  primitives.rst  startup_scripts.rst  template_pipeline.rst
fits2png_example/: fits2png.py
fits2png_example/configs/: config.cfg  fits2png.cfg
fits2png_example/pipelines/: fits2png_pipeline.py
fits2png_example/primitives/: simple_fits_reader.py
keckdrpframework/: README.md  __init__.py  _astropy_init.py  conftest.py
keckdrpframework/config/: config.cfg  framework.cfg  framework_config.py  instr.cfg  logger.cfg  logger.conf
keckdrpframework/core/: __init__.py  bokeh_plotting.py  framework.py  queues.py  server_task.py
keckdrpframework/example_subpkg/: setup_package.py
keckdrpframework/examples/: Notes-Parallel-Processing.rst  README.md  config.cfg  dirlist  fit2png.cfg  fits2png.cfg  logger.conf  runTest_harness.sh  runTest_harness2.sh  source.me  t.sh  test_harness.py  test_harness2.py
keckdrpframework/examples/pipelines/: fits2png_pipeline.py
keckdrpframework/examples/test1/: test_harness.py
keckdrpframework/examples/test_pipelines/: fits2png_pipeline.py
keckdrpframework/examples/tools/: README.md  add_event.py  event_queue_info.py  start_queue_manager.py  stop_queue_manager.py  toolHelper.py
keckdrpframework/models/: __init__.py  action.py  arguments.py  data_set.py  event.py  processing_context.py
keckdrpframework/mytests/: config.cfg  data_set.ipynb  runTest.sh  runTestNotebook.sh  server.py  testAll.sh
keckdrpframework/mytests/output/: contact_sheet.html
keckdrpframework/pipeline_template/: README.md  config.cfg  logger.cfg  setup.py
keckdrpframework/pipeline_template/my_pipeline/configs/: framework.cfg
keckdrpframework/pipeline_template/my_pipeline/pipelines/: template_pipeline.py
keckdrpframework/pipeline_template/scripts/: template_script.py
keckdrpframework/pipelines/: base_pipeline.py  kcwi_pipeline.py
keckdrpframework/primitives/: base_img.py  base_primitive.py  ccd_primitives.py  create_contact_sheet_HTML.py  hist_equal2d.py  ingest_files.py  kcwi_primitives.py  noise_removal.py  save_png.py  simple_fits_reader.py  template.py
keckdrpframework/private_tests/: test_queues.py
keckdrpframework/scripts/: reduce.py  reduce_server.py
keckdrpframework/templates/: README.md  config.cfg  logger.cfg  make_copy.sh  runTest_template.sh  test_template.py
keckdrpframework/templates/template_pipelines/: template_pipeline.py
keckdrpframework/tests/: config.cfg  instr.cfg  runTest.sh  test_kcwi.py  test_server.py
keckdrpframework/tools/: DRPF-remote-Interface.ipynb  README.md  Reduce_data.ipynb  add_event.py  event_queue_info.py  fits2png.cfg  interface.py  logger.cfg  multi_config.cfg  single_config.cfg  start_queue_manager.py  stop_queue_manager.py
keckdrpframework/unit_tests/: README.md  example_config.cfg  my_config.cfg  pytest.ini  simple_pipeline.py  source.me  test_clean.py  test_config.py  test_core.py  test_framework.py  test_models.py  test_recurrent.py  test_run_example.py  z_clean_test.py
keckdrpframework/unit_tests/test_files/: 569_0000.fits  569_0001.fits  570_0000.fits  570_0001.fits  571_0000.fits  571_0001.fits
keckdrpframework/utils/: DRPF_logger.py  drpf_logger.py  easyHTTP.py  easy_http.py  try_wrapper.py  working_directory.py
licenses/: LICENSE.rst  TEMPLATE_LICENCE.rst
pipeline_template/: setup.cfg  setup.py
pipeline_template/template/configs/: framework.cfg  logger.cfg  template.cfg
pipeline_template/template/pipelines/: template_pipeline.py
pipeline_template/template/primitives/: Template.py  Template2.py
pipeline_template/template/scripts/: template_script.py
template_pipeline/scripts/: reduce.py  reduce_server.py
template_pipeline/template_pipeline/pipelines/: template_pipeline.py
template_pipeline/template_pipeline/primitives/: template_primitives.py
(+4 files in other folders)
