[tool.poetry]
name = "keckdrpframework"
version = "1.0.0"
description = "Framework for DRPs at Keck"
authors = [
    "M. Brodheim <mbrodheim@keck.hawaii.edu>",
    "L. Rizzi",
    "S. Kwok",
    "M. Brown"
]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://github.com/Keck-DataReductionPipelines/KeckDRPFramework.git"
repository = "https://github.com/Keck-DataReductionPipelines/KeckDRPFramework.git"
packages = [{ include = "keckdrpframework" }]

[tool.poetry.dependencies]
python = ">=3.8"
pandas = ">=2.0.0"
numpy = "<=2.0.0"
importlib_resources = "*"
astropy = { version = ">=6.1.7" , optional = true }
pillow = { version = ">=12.1.1" , optional = true }
matplotlib = { version = ">=3.9.4" , optional = true }

[tool.poetry.extras]
demos = ["astropy", "pillow", "matplotlib"]

[tool.poetry.group.dev.dependencies]
# From requirements.txt (dev)
pytest = "*"
sphinx = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
