[metadata]
name = keckdrpframework
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.0.dev
author = L. Rizzi, S. Kwok, M. Brown
author_email = lrizzi@keck.hawaii.edu
description = Prototype framework for DRPs at Keck
long_description = 
license = BSD 3-Clause
url = http://docs.astropy.org/projects/package-template/
edit_on_github = False
github_project = astropy/astropy
python_requires = ">=3.6"

[options]
# install_requires should be formatted as a semicolon-separated list, e.g.:
# install_requires = astropy; scipy; matplotlib
install_requires = astropy
zip_safe = False
use_2to3 = False

[options.entry_points]
console_scripts = 
    
    reduce = keckdrpframework.scripts.reduce:main
    reduce_server = keckdrpframework.scripts.reduce_server:main

    

[options.package_data]
* = *.c
keckdrpframework = data/*
keckdrpframework.tests = coveragerc

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
