[metadata]
name = keckdrpframework
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.0.dev
author = L. Rizzi, S. Kwok, M. Brown
author_email = lrizzi@keck.hawaii.edu
description = Framework for DRPs at Keck
long_description = 
license = BSD 3-Clause
url = https://github.com/Keck-DataReductionPipelines/KeckDRPFramework.git
edit_on_github = False
github_project = Keck-DataReductionPipelines/KeckDRPFramework
python_requires = ">=3.6"

[options]
# install_requires should be formatted as a semicolon-separated list, e.g.:
# install_requires = astropy; scipy; matplotlib
install_requires = astropy
zip_safe = False
use_2to3 = False


[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
